umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_ethyl-isocyanide.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {
      :atoms ["C#h3#v" "C#h2#v2" "N#c+#v4" "C#c-#n#v3"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :triple]]
      :charge 0
      :spin "#u0 #s1"}
    :success true}
  :counts {
    :output {
      :atoms ["C#h3#v" "C#h2#v2" "N#c+#v4" "C#c-#n#v3"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :triple]]
      :charge 0
      :spin "#u0 #s1"}
    :success true}}
